# backend-microservice-arch

./: .gitignore  .pre-commit-config.yaml  README.md  progress.txt
backend/users-service/: .dockerignore  .env.dev  .env.test  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml  test.py
backend/users-service/app/: main.py
backend/users-service/app/core/: base.py  config.py
backend/users-service/app/core/types/: dev.py  env_type.py  test.py
backend/users-service/app/database/: __init__.py
backend/users-service/app/database/migrations/: alembic.ini  env.py
backend/users-service/app/database/migrations/versions/: 2882cc730869_update_base_model.py  69821e96bb49_set_unique_for_email_field.py  778658b0c78e_fix_updated_at_field.py  8f95fa03c5ca_.py  e2c7b72a88a4_fix_updated_at_field.py
backend/users-service/app/database/models/: __init__.py  base.py  user.py
backend/users-service/app/domain/: dependencies.py  guards.py  listeners.py  repositories.py  schemas.py  services.py  signals.py
backend/users-service/app/domain/controllers/: __init__.py  auth.py  users.py
backend/users-service/app/domain/users/: dependencies.py  repositories.py  schemas.py  services.py
backend/users-service/app/domain/users/controllers/: __init__.py  auth.py  users.py
backend/users-service/app/lib/: dependencies.py  exceptions.py  schemas.py  security.py  utils.py
backend/users-service/app/lib/broker/: __init__.py  broker.py  rmq_plugin.py
backend/users-service/app/lib/security/: crypt.py  jwt.py
backend/users-service/app/server/: __factory__.py  builder.py  events.py  plugins.py  routes.py
backend/users-service/app/utils/broker/: __init__.py  broker.py  plugin.py
backend/users-service/app/utils/logging/: __init__.py  configurator.py  setup.py
backend/users-service/app/utils/logging/handlers/: __init__.py  aiopika.py  base.py  sqlalchemy.py  uvicorn.py
backend/users-service/app/utils/message_brokers/: broker.py  plugin.py
backend/users-service/app/utils/message_brokers/brokers/: base.py  emails_broker.py  logs_broker.py
backend/users-service/app/utils/message_brokers/exceptions/: __init__.py  base.py  queue.py
backend/users-service/scripts/: docker-entrypoint.sh
service/api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
service/api/app/core/: base.py
service/api/app/database/: __init__.py
service/api/app/database/models/: __init__.py  base.py
service/api/app/domain/: repositories.py  services.py
service/api/app/domain/controllers/: __init__.py  auth.py  users.py
service/api/app/lib/: dependencies.py
service/api/app/lib/security/: utils.py
service/api/app/server/: routes.py
service/api/app/utils/logging/: __init__.py  configurator.py
service/api/app/utils/message_brokers/: __init__.py  setup.py
service/api/scripts/: docker-entrypoint.sh
source/backend/: .env.dist  Makefile  __main__.py  alembic.ini  backend.Dockerfile  docker-compose.yaml  main.py  pyproject.toml
source/backend/alembic/: env.py
source/backend/alembic/versions/: 0075ce25d406_update.py  147d168605ad_delete_user_profile.py  2d585e9ebc97_test.py  66feba54d6c1_.py  79884d20ebd2_.py  8ba0207db46e_initial_main_.py  a229e1f8314b_.py  b0740a1904a2_initial2.py  d5abee2ec6a2_refreshsession.py  db6a8deecc37_.py  dc62c85e79de_update.py
source/backend/app/: alembic.ini  main.py  pyproject.toml
source/backend/app/alembic/: env.py
source/backend/app/alembic/versions/: 66cf2c9bbf16_initial_data.py  9d31b64741b9_up_models.py  c16fd24f56d5_empty.py  eba18da8bd69_update_added_referrals.py
source/backend/app/api/: __init__.py  dependencies.py  deps.py
source/backend/app/api/api_v1/: __init__.py  api.py  auth.py  users.py
source/backend/app/api/routes/: auth.py  user_profile.py  users.py
source/backend/app/app/api/: __init__.py  deps.py
source/backend/app/app/core/: __init__.py  config.py  events.py  security.py
source/backend/app/app/crud/: __init__.py  base.py  crud_user.py
source/backend/app/app/infrastructure/: __init__.py
source/backend/app/app/models/: __init__.py  base.py  referral.py  users.py
source/backend/app/app/schemas/: __init__.py  referral.py  user.py
source/backend/app/core/: __init__.py  config.py  events.py  security.py
source/backend/app/core/settings/: __init__.py  app.py
source/backend/app/crud/: base.py  crud_user.py
source/backend/app/infrastructure/: __init__.py
source/backend/app/infrastructure/postgres/: __init__.py  setup.py
source/backend/app/models/: __init__.py  base.py  session.py  user.py  users.py
source/backend/app/repositories/: __init__.py  repository.py  user.py
source/backend/app/schemas/: __init__.py  token.py  user.py  users.py
source/backend/app/scripts/: docker-entrypoint-backend.sh  docker-entrypoint-initdb.sh  format-code.sh
source/backend/app/services/: __init__.py  auth.py  user.py
source/backend/app/utils/: __init__.py  exceptions.py  security.py  specification.py  unitofwork.py
source/backend/nginx/: nginx.conf
source/backend/scripts/: docker-entrypoint-backend.sh  docker-entrypoint-initdb.sh
source/backend/users-service/: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  pyproject.toml
source/backend/users-service/alembic/: env.py
source/backend/users-service/alembic/versions/: 00f7ec19705c_initial_2024_03_29_20_04.py  2e771413244e_add_fk_2024_04_04_17_28.py  5a38f9e70039_add_fk_2024_04_04_17_30.py  7dc725447acb_initial_30_03_2024_11_00.py  b7e294f49c45_initial_30_03_2024_10_59.py
source/backend/users-service/app/: main.py
source/backend/users-service/app/api/: __init__.py  dependencies.py
source/backend/users-service/app/core/: config.py  events.py
source/backend/users-service/app/database/: engine.py  uow.py
source/backend/users-service/app/models/: __init__.py  session.py  user.py
source/backend/users-service/app/schemas/: __init__.py  user.py
source/backend/users-service/app/services/: __init__.py  auth.py  user.py
source/backend/users-service/app/utils/: exceptions.py
source/backend/users-service/scripts/: backend.sh  init-db-entrypoint.sh
(+48 files in other folders)
