[tool.poetry]
name = "litestar-users-service"
version = "0.1.0"
description = "The basic users API is written in Litestar"
authors = ["monok8i <didkivskiyyura725@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
structlog = "^24.1.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
passlib = "^1.7.4"
bcrypt = "^4.1.2"
litestar = {extras = ["jwt"], version = "^2.8.3"}
advanced-alchemy = "0.9.0"
redis = "^5.0.4"
pyjwt = "^2.8.0"
aio-pika = "^9.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
mypy = "^1.9.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"
line-length = 88
[tool.ruff.lint]
select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "Q",
    "S",
    "T",
    "W",
    "YTT",
    "RET",
    "SIM",
    "ASYNC",
]
exclude = [
    ".venv",
    ".idea",
    ".tests",
    ".certs",
    "poetry.lock",
]
ignore = ["F401", "ISC001"]


[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]
exclude = [
    ".venv",
    ".idea",
    ".tests",
    ".cert",
]